    in all current Python -dev packages.  Update python-support required
    version from 0.3 to 0.6, following README of current python-support
    package.  Remove "python2.4-dev" from dependency of
    libboost-python-dev; add python2.4-dev and python2.5-dev to its
    Suggests line since users of this package may need any of the
    currently-supported Python development packages.

 -- Steve M. Robbins <smr@debian.org>  Sat, 22 Mar 2008 10:25:19 -0500

boost (1.34.1-7) unstable; urgency=low

  * debian/control (libboost-dev): Move libboost-serialization-dev from
    Recommends to Depends since ptr_vector needs it.  Closes: 457654,
    465720.  Note that the next version of the Pointer Container Library
    uses a non-intrusive implementation of serialization, decoupling the
    libraries [http://thread.gmane.org/gmane.comp.lib.boost.devel/169668].
    This change can be reverted when the new upstream is packaged.
  
  * debian/documentation-files: Updated as per procedure in debian/Notes.
    Closes: #338106.  
  * debian/rules (libboost-doc): Also copy in all doc directories.

 -- Steve M. Robbins <smr@debian.org>  Mon, 18 Feb 2008 13:36:30 -0600

boost (1.34.1-6) unstable; urgency=low

  [Fixes for GCC 4.3]
  * boost/regex/v4/cpp_regex_traits.hpp:
  * boost/test/test_tools.hpp: Add #include <climits> to pick up
    definition of CHAR_BIT (thanks, Jiri Palecek).  Closes: #444359.
  * boost/python/detail/def_helper.hpp: Change keywords<0> to
    detail::keywords<0>, avoiding a "changes meaning" error.  Patch from
    upstream SVN.
  * Verified that tagpy builds.  Closes: #444359.
  * Verified that twinkle builds (after fixing #465187).  Closes: #454815.
  * Verified that kdeedu builds (had to omit uninstallable libfacile-ocaml-dev
    build-dep).  Closes: #463464.

 -- Steve M. Robbins <smr@debian.org>  Mon, 11 Feb 2008 01:40:05 -0600

boost (1.34.1-5) unstable; urgency=medium

  [ Domenico Andreoli ]